--- a/Gum2/Gum2.csproj
+++ b/Gum2/Gum2.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GumCommon\GumCommon.csproj" />
+    <ProjectReference Include="..\GumRuntimeNet6\GumRuntimeNet6.csproj" />
     <ProjectReference Include="..\MonoGameGum\MonoGameGum.csproj" />
+    <ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesStandard.csproj" />
   </ItemGroup>
 </Project>
