--- a/GumRuntimeNet6/GumRuntimeNet6.csproj
+++ b/GumRuntimeNet6/GumRuntimeNet6.csproj
@@ -35,7 +35,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\GumDataTypes\GumDataTypesNet6.csproj" />
-	  <ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesStandard.csproj" />
+	  <ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesNet.csproj" />
 	</ItemGroup>
 
 </Project>
