--- a/GumCommon/GumCommon.csproj
+++ b/GumCommon/GumCommon.csproj
@@ -43,7 +43,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\GumDataTypes\GumDataTypesNet6.csproj" />
-		<ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesStandard.csproj" />
+		<ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesNet.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Include="..\Gum\DataTypes\BehaviorSaveExtensionMethods.cs">
