More compile error fixes.

--- a/GumDataTypes/GumDataTypesNet6.csproj
+++ b/GumDataTypes/GumDataTypesNet6.csproj
@@ -32,7 +32,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesStandard.csproj" />
+	  <ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesNet.csproj" />
 	</ItemGroup>
 
 </Project>
