One more change...

--- a/Gum2/Gum2.csproj
+++ b/Gum2/Gum2.csproj
@@ -19,7 +19,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GumCommon\GumCommon.csproj" />
+    <ProjectReference Include="..\GumDataTypes\GumDataTypesNet6.csproj" />
     <ProjectReference Include="..\GumRuntimeNet6\GumRuntimeNet6.csproj" />
     <ProjectReference Include="..\MonoGameGum\MonoGameGum.csproj" />
+    <ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesNet.csproj" />
   </ItemGroup>
 </Project>
