--- a/Gum2/Gum2.csproj
+++ b/Gum2/Gum2.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.0" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="8.0.0" />
+    <PackageReference Include="System.Composition.AttributedModel" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,5 +24,9 @@
     <ProjectReference Include="..\GumDataTypes\GumDataTypesNet6.csproj" />
     <ProjectReference Include="..\MonoGameGum\MonoGameGum.csproj" />
     <ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesNet.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Plugins\" />
   </ItemGroup>
 </Project>
