Started adding GumComamnds.

--- a/Gum2/Gum2.csproj
+++ b/Gum2/Gum2.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\MonoGameGum\MonoGameGum.csproj" />
     <ProjectReference Include="..\ToolsUtilities\ToolsUtilitiesNet.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Managers\" />
+  </ItemGroup>
 </Project>
